<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12.dp"
    android:backgroundTint="?attr/colorPrimaryFixed"
    android:padding="12dp"
    android:textColor="?attr/colorPrimaryFixed"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false"
    app:strokeWidth="1dp"
    app:strokeColor="@color/stroke_color"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleX="1.4"
            android:scaleY="1.4"
            app:circularflow_radiusInDP="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/arepas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foodImage"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameOfFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/nama_makanan"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/fromOfFood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/asal_darimakanan"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/priceOfFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/harga_dari_makanan"
                        android:textColor="?attr/colorOnPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/nama_asli_makanan"
                        android:textColor="?attr/colorOnPrimary" />


                    <TextView
                        android:id="@+id/fromFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/asal_makanan"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/priceFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/harga_makanan"
                        android:textColor="?attr/colorOnPrimary" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
